# Telegram-WP-Linkedin

./: .env.example  .gga  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: pr-gates.yml  release.yml
app/: __init__.py  main.py
app/adapters/: __init__.py  errors.py  linkedin.py  openai.py  pexels.py  telegram.py  wordpress.py
app/core/: models.py  pipeline.py  ports.py
app/infra/: config.py  db.py  retry.py
app/repositories/: events_repo.py  lock_repo.py  publications_repo.py  runs_repo.py  state_repo.py  updates_repo.py
docs/: README.md
docs/00-context/: workflow-analysis.md  workflow-analysis.sanitized.md
docs/01-architecture/: python-architecture.md  system-design.md
docs/02-data/: sqlite-schema.md
docs/03-migration/: enterprise-migration-plan.md
docs/04-operations/: ai-usage-cost-control.md  branching-governance.md  docker-cicd-strategy.md  runbook.md
docs/05-quality/: testing-strategy.md
docs/06-security/: secrets-operating-standard.md
docs/adr/: ADR-0001-migrate-from-n8n-to-code.md  ADR-0002-adopt-python-docker-github-actions.md
docs/sdd/: README.md
docs/sdd/changes/2026-04-18-migrate-n8n-to-python/: design.md  handoff-next-session.md  proposal.md  spec.md  tasks.md
migrations/: 0001_init.sql
scripts/: local-quality-gate.ps1  local-security-scan.ps1  promote-skills-global.ps1
skills/git-commit-governance/: SKILL.md
skills/python-enterprise-architecture/: SKILL.md
tests/: test_adapters_contracts.py  test_db.py  test_pipeline.py  test_retry.py
(+5 files in other folders)
