[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "telegram-wp-linkedin"
version = "0.1.0"
description = "Telegram to WordPress and LinkedIn automation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
pipeline = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "app"

[tool.hatch.build.targets.wheel]
packages = ["app"]
